More flexible image - Added new logo image section - Modified assets to maintain 1:1 ratio - Added reference to assets author - Wrapped images to separate containers to allow flexible alignment - Modified <br> elements to be consistent among browsers - Added custom outline color - Other small changes and fixes

--- a/style.css
+++ b/style.css
@@ -75,12 +75,58 @@ body {
 #_image_section_wrapper_ {
     display: flex;
     flex: 2 1 0;
-    justify-content: center;
-    align-items: center;
+
     background-color:  white;
+    width: 100%;
+    height: 100%;
 
     > #_image_section_ {
+        display: flex;
+        flex: 1 1 0;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
     }
+}
+
+#_logo_container_ {
+    display: flex;
+    align-self: start;
+    align-items: center;
+    width: 100%;
+    padding: 5px;
+    & img {
+        width: 101.45px;
+        height: 101.45px;
+        
+        padding: 0;
+        margin: 0;
+    }
+    & p {
+        font-size: var(--font-size-big);
+    }
+}
+
+#_artwork_container_wrapper_ {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+
+    & img {
+        max-width: 100%;
+        max-height: 100%;
+        min-width: 50%;
+        min-height: 100%;
+
+        padding: 0;
+        margin: 0;
+    }
+}
+
+
+#_artwork_container_ {
 }
 
 #_form_section_wrapper_ {
@@ -145,9 +191,11 @@ input {
     padding: 5px;
 
     &:focus {
+        outline-style:solid;
         outline-color: burlywood;
     }
     &:invalid {
+        outline-style:solid;
         outline-color: burlywood;
     }
 }
@@ -164,28 +212,35 @@ textarea {
     border-radius: 5px;
     padding: 5px;
     border: 0px;
-
+    &:focus {
+        outline-style:solid;
+        outline-color: burlywood;
+    }
+    &:invalid {
+        outline-style:solid;
+        outline-color: burlywood;
+    }
 }
 
-img {
-    background-color: white;
-
-    max-width: 100%;
-    max-height: 100%;
-    min-width: 50%;
-    min-height: 100%;
-
-    padding: 0;
-    margin: 0;
-}
 
 h1 {
     font-size: var(--font-size-big);
     font-weight: var(--font-weight-big);
+    padding: 5px;
 }
 
 p {
-    font-size: var(--font-size-normal)
+    font-size: var(--font-size-normal);
+    padding: 5px;
+    &.reference {
+        font-size: var(--font-size-mini);
+    }
+}
+
+br {
+    display: block;
+    margin-top: 10px;
+    content: "";
 }
 
 @media (max-width: 768px) {
@@ -193,5 +248,8 @@ p {
         #_content_ {
             flex-direction: column;
         }
+    }
+    .reference {
+        align-self: flex-start;
     }
 }
